Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-28529

Crash when opening type hierarchy

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P1: Critical P1: Critical
    • Qt Creator 9.0.1
    • Qt Creator 9.0.0
    • All Other Issues
    • None
    • e2155a91d (9.0), 0c9706ada (9.0)

      Crashed thread:

      Thread 1 (Thread 0x7fc9cbfff640 (LWP 40461)):
      #0  0x00007fca6d4219ac in CppEditor::Internal::CppElement::CppElement (this=0x7fc9203c2960) at /home/jarek/dev/creator-9/src/plugins/cppeditor/cppelementevaluator.h:56
      #1  0x00007fca6d421a4e in CppEditor::Internal::CppDeclarableElement::CppDeclarableElement (this=0x7fc9203c2960) at /home/jarek/dev/creator-9/src/plugins/cppeditor/cppelementevaluator.h:73
      #2  0x00007fca6d421b9f in CppEditor::Internal::CppClass::CppClass (this=0x7fc9203c2960) at /home/jarek/dev/creator-9/src/plugins/cppeditor/cppelementevaluator.h:86
      #3  0x00007fca6d428b86 in QtPrivate::QGenericArrayOps<CppEditor::Internal::CppClass>::copyAppend (this=0x7fc9cbffe5a0, b=0x0, e=0x110) at /home/jarek/dev/qt-64/qtbase/src/corelib/tools/qarraydataops.h:294
      #4  0x00007fca6d427199 in QArrayDataPointer<CppEditor::Internal::CppClass>::reallocateAndGrow (this=0x7fc9217a18b8, where=QArrayData::GrowsAtEnd, n=0, old=0x0) at /home/jarek/dev/qt-64/qtbase/src/corelib/tools/qarraydatapointer.h:226
      #5  0x00007fca6d424e8b in QArrayDataPointer<CppEditor::Internal::CppClass>::detach (this=0x7fc9217a18b8, old=0x0) at /home/jarek/dev/qt-64/qtbase/src/corelib/tools/qarraydatapointer.h:130
      #6  0x00007fca6d422175 in QList<CppEditor::Internal::CppClass>::detach (this=0x7fc9217a18b8) at /home/jarek/dev/qt-64/qtbase/src/corelib/tools/qlist.h:401
      #7  0x00007fca6d41fb29 in QList<CppEditor::Internal::CppClass>::end (this=0x7fc9217a18b8) at /home/jarek/dev/qt-64/qtbase/src/corelib/tools/qlist.h:588
      #8  0x00007fca6d4200aa in QList<CppEditor::Internal::CppClass>::emplaceBack<CppEditor::Internal::CppClass> (this=0x7fc9217a18b8) at /home/jarek/dev/qt-64/qtbase/src/corelib/tools/qlist.h:853
      #9  0x00007fca6d41e750 in QList<CppEditor::Internal::CppClass>::append (this=0x7fc9217a18b8, t=...) at /home/jarek/dev/qt-64/qtbase/src/corelib/tools/qlist.h:440
      #10 0x00007fca6d419aa1 in CppEditor::Internal::CppClass::lookupDerived (this=0x7fc920001e00, futureInterface=..., declaration=0x7fc9a45cdf90, snapshot=...) at /home/jarek/dev/creator-9/src/plugins/cppeditor/cppelementevaluator.cpp:203
      #11 0x00007fca6d41a292 in CppEditor::Internal::createTypeHierarchy (futureInterface=..., snapshot=..., lookupItem=..., context=..., symbolFinder=...) at /home/jarek/dev/creator-9/src/plugins/cppeditor/cppelementevaluator.cpp:385
      #12 0x00007fca6d42e371 in Utils::Internal::runAsyncQFutureInterfaceDispatch<QSharedPointer<CppEditor::Internal::CppElement>, void (*)(QFutureInterface<QSharedPointer<CppEditor::Internal::CppElement> >&, CPlusPlus::Snapshot const&, CPlusPlus::LookupItem const&, CPlusPlus::LookupContext const&, CppEditor::SymbolFinder), CPlusPlus::Snapshot, CPlusPlus::LookupItem, CPlusPlus::LookupContext, CppEditor::SymbolFinder> (futureInterface=..., function=@0x55bd9584b8a8: 0x7fca6d41a0a8 <CppEditor::Internal::createTypeHierarchy(QFutureInterface<QSharedPointer<CppEditor::Internal::CppElement> >&, CPlusPlus::Snapshot const&, CPlusPlus::LookupItem const&, CPlusPlus::LookupContext const&, CppEditor::SymbolFinder)>) at /home/jarek/dev/creator-9/src/libs/utils/runextensions.h:236
      #13 0x00007fca6d42e203 in Utils::Internal::runAsyncMemberDispatch<QSharedPointer<CppEditor::Internal::CppElement>, void (*)(QFutureInterface<QSharedPointer<CppEditor::Internal::CppElement> >&, CPlusPlus::Snapshot const&, CPlusPlus::LookupItem const&, CPlusPlus::LookupContext const&, CppEditor::SymbolFinder), CPlusPlus::Snapshot, CPlusPlus::LookupItem, CPlusPlus::LookupContext, CppEditor::SymbolFinder, void> (futureInterface=..., function=@0x55bd9584b8a8: 0x7fca6d41a0a8 <CppEditor::Internal::createTypeHierarchy(QFutureInterface<QSharedPointer<CppEditor::Internal::CppElement> >&, CPlusPlus::Snapshot const&, CPlusPlus::LookupItem const&, CPlusPlus::LookupContext const&, CppEditor::SymbolFinder)>) at /home/jarek/dev/creator-9/src/libs/utils/runextensions.h:253
      #14 0x00007fca6d42e0c2 in Utils::Internal::runAsyncImpl<QSharedPointer<CppEditor::Internal::CppElement>, void (*)(QFutureInterface<QSharedPointer<CppEditor::Internal::CppElement> >&, CPlusPlus::Snapshot const&, CPlusPlus::LookupItem const&, CPlusPlus::LookupContext const&, CppEditor::SymbolFinder), CPlusPlus::Snapshot, CPlusPlus::LookupItem, CPlusPlus::LookupContext, CppEditor::SymbolFinder> (futureInterface=..., function=@0x55bd9584b8a8: 0x7fca6d41a0a8 <CppEditor::Internal::createTypeHierarchy(QFutureInterface<QSharedPointer<CppEditor::Internal::CppElement> >&, CPlusPlus::Snapshot const&, CPlusPlus::LookupItem const&, CPlusPlus::LookupContext const&, CppEditor::SymbolFinder)>) at /home/jarek/dev/creator-9/src/libs/utils/runextensions.h:282
      #15 0x00007fca6d42df0e in Utils::Internal::AsyncJob<QSharedPointer<CppEditor::Internal::CppElement>, void (*)(QFutureInterface<QSharedPointer<CppEditor::Internal::CppElement> >&, CPlusPlus::Snapshot const&, CPlusPlus::LookupItem const&, CPlusPlus::LookupContext const&, CppEditor::SymbolFinder), CPlusPlus::Snapshot const&, CPlusPlus::LookupItem const&, CPlusPlus::LookupContext const&, CppEditor::SymbolFinder&>::runHelper<0ul, 1ul, 2ul, 3ul, 4ul> (this=0x55bd9584b780) at /home/jarek/dev/creator-9/src/libs/utils/runextensions.h:351
      #16 0x00007fca6d42ddbd in Utils::Internal::AsyncJob<QSharedPointer<CppEditor::Internal::CppElement>, void (*)(QFutureInterface<QSharedPointer<CppEditor::Internal::CppElement> >&, CPlusPlus::Snapshot const&, CPlusPlus::LookupItem const&, CPlusPlus::LookupContext const&, CppEditor::SymbolFinder), CPlusPlus::Snapshot const&, CPlusPlus::LookupItem const&, CPlusPlus::LookupContext const&, CppEditor::SymbolFinder&>::run (this=0x55bd9584b780) at /home/jarek/dev/creator-9/src/libs/utils/runextensions.h:331
      #17 0x00007fca91bff615 in Utils::Internal::RunnableThread::run (this=0x55bd9a5258f0) at /home/jarek/dev/creator-9/src/libs/utils/runextensions.cpp:17
      #18 0x00007fca8f56745b in operator() (__closure=0x7fc9cbffed18) at /home/jarek/dev/qt-64/qtbase/src/corelib/thread/qthread_unix.cpp:321
      #19 0x00007fca8f5686a1 in (anonymous namespace)::terminate_on_exception<QThreadPrivate::start(void*)::<lambda()> >(struct {...} &&) (t=...) at /home/jarek/dev/qt-64/qtbase/src/corelib/thread/qthread_unix.cpp:257
      #20 0x00007fca8f567527 in QThreadPrivate::start (arg=0x55bd9a5258f0) at /home/jarek/dev/qt-64/qtbase/src/corelib/thread/qthread_unix.cpp:280
      #21 0x00007fca8ed5bb43 in start_thread (arg=<optimized out>) at ./nptl/pthread_create.c:442
      #22 0x00007fca8ededa00 in clone3 () at ../sysdeps/unix/sysv/linux/x86_64/clone3.S:81
      

        For Gerrit Dashboard: QTCREATORBUG-28529
        # Subject Branch Project Status CR V

            jkobus Jarek Kobus
            jkobus Jarek Kobus
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes